--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -2,6 +2,10 @@
 @import "~bootstrap/scss/bootstrap.scss"; // così si importa un file dai node modules
 
 //Font
+$fa-font-path: "./webfonts";
+// @import "~@/fortawesome/fontawesome-free/scss/fontawesome.scss";
+// @import "~@/fortawesome/fontawesome-free/scss/solid.scss";
+// @import "~@/fortawesome/fontawesome-free/scss/brands.scss";
 @import "~@fontsource/montserrat/index.css";
 @import "~@fontsource/montserrat/700.css";
 
